feature: add select sort algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,15 @@ target_include_directories(data_structures PRIVATE ${PROJECT_SOURCE_DIR}/include
 add_subdirectory(third_party/googletest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 enable_testing()
-add_executable(runTests 
-test/test_main.cpp
-src/graph/edge.cpp
-src/graph/edge.cpp
-src/graph/directed_graph.cpp
-src/graph/algorithm/shortest_path/dijkstra.cpp
-test/graph/test_directed_graph.cpp
-test/graph/algorithm/shortest_path/test_dijkstra.cpp
+add_executable(runTests
+    test/test_main.cpp
+    test/sort/test_sort.cpp
+    src/graph/edge.cpp
+    src/graph/edge.cpp
+    src/graph/directed_graph.cpp
+    src/graph/algorithm/shortest_path/dijkstra.cpp
+    test/graph/test_directed_graph.cpp
+    test/graph/algorithm/shortest_path/test_dijkstra.cpp
 )
 target_link_libraries(runTests gtest gtest_main)
 target_include_directories(runTests PRIVATE ${PROJECT_SOURCE_DIR}/include)
